force-app/main/default/objects/LLC_BI__Connection__c/LLC_BI__Connection__c.object-meta.xml
<CustomObject>
    <description>The Connection Object is used to connect relationships together outside of entity involvement.  IE Parent and children relationships, spouses, etc.</description>
    <label>Connection</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>