force-app/main/default/objects/LLC_BI__Connection__c/fields/JHJX__BenflOwnInfo_TINCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__BenflOwnInfo_TINCode__c</fullName>
    <description>The Users populate this optional field to define the type of TIN code.  By default, it is blank.</description>
    <label>Beneficial Owner TINCode Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PASSPORT</fullName>
                <label>Passport</label>
            </value>
            <value>
                <fullName>TAXID</fullName>
                <label>Tax ID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>