force-app/main/default/objects/LLC_BI__Connection__c/fields/JHJX__BenflOwnType__c.field-meta.xml
<CustomField>
    <fullName>JHJX__BenflOwnType__c</fullName>
    <description>The Users populate this required field to define the type of beneficial owner information.  By default, it is Beneficial Owners.</description>
    <label>Beneficial Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
                <default>true</default>
                <label>Beneficial owners</label>
            </value>
            <value>
                <fullName>CntlOwn</fullName>
                <label>Both controlling individual and beneficial owner</label>
            </value>
            <value>
                <fullName>Cntl</fullName>
                <label>Controlling individual/significant responsibility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>