force-app/main/default/objects/LLC_BI__Connection__c/fields/JHJX__IdVerifyRsnCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__IdVerifyRsnCode__c</fullName>
    <description>The Users populate this required field to define the reason code for beneficial owner information.  By default, it is blank.</description>
    <label>Verification Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
                <label>Account Revision</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Change in Occupation/Nature of Business</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>General Maintenance to CIF</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>New Account</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>Non-Triggering Event</label>
            </value>
            <value>
                <fullName>OC</fullName>
                <label>Ownership Changes</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>Product Change</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Significant Transaction Activity Changes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>