force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__Connected_To__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Connected_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is a look up field to relationships that serve as the &quot;connected to&quot; relationship.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Connected From</relationshipLabel>
    <relationshipName>Connected_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>