force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__Controlling_Individual__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Controlling_Individual__c</fullName>
    <description>Users manually populate this optional picklist field. This field is used to determine the role of the controlling individual. By default, it is blank.</description>
    <label>Controlling Individual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Officer or Senior Manager</fullName>
            </value>
            <value>
                <fullName>Other Person Performing Similar Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>