force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is a free form text field, used to enter in details/ description of the connection</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>