force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__Indirect_Ownership_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Indirect_Ownership_Percent__c</fullName>
    <description>Users manually populate this optional field. This field is used to capture the indirect ownership percentage.</description>
    <label>Indirect Ownership Percent</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>