force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__Official_Title__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Official_Title__c</fullName>
    <description>Users manually populate this optional text field. This field is used to indicate the official title of the Beneficial Owner.</description>
    <label>Official Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>