force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Role__c</fullName>
    <description>Deprecated field, no longer in use</description>
    <label>-D Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Spouse/Life Partner</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Business Partner</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Co-Owner</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Affiliated Company</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
                <default>true</default>
                <label>Connection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>