force-app/main/default/objects/LLC_BI__Connection__c/fields/LLC_BI__UID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__UID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Auto-generated unique identifier for this connection.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated unique identifier for this connection.</inlineHelpText>
    <label>UID</label>
    <length>54</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>