force-app/main/default/objects/LLC_BI__Connection__c/fields/Role_cm__c.field-meta.xml
<CustomField>
    <fullName>Role_cm__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>