force-app/main/default/objects/LLC_BI__Connection__c/validationRules/LLC_BI__Prevent_Edit_on_Connections.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Prevent_Edit_on_Connections</fullName>
    <active>true</active>
    <description>Deprecated, connections can be edited.</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>Connections are not editable.</errorMessage>
</ValidationRule>